force-app/main/default/objects/Deployment_Request__c/Deployment_Request__c.object-meta.xml
<CustomObject>
    <label>Deployment_Request</label>
    <nameField>
        <label>Deployment_Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment_Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>