force-app/main/default/objects/Deployment_Request__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>