force-app/main/default/objects/Deployment_Request__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Credentials__c</referenceTo>
    <relationshipLabel>Deployment Requests</relationshipLabel>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>