force-app/main/default/objects/Deployment_Request__c/fields/Deployment_Number__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Number__c</fullName>
    <label>Deployment Number</label>
    <type>AutoNumber</type>
</CustomField>