force-app/main/default/objects/Deployment_Request__c/fields/Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Result__c</fullName>
    <label>Deployment Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>