force-app/main/default/objects/Deployment_Request__c/fields/Git_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Git_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git Snapshot</label>
    <referenceTo>Git_Snapshot__c</referenceTo>
    <relationshipLabel>Deployment Requests</relationshipLabel>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>