force-app/main/default/objects/Deployment_Request__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Deployment_Request</relationshipLabel>
    <relationshipName>Deployment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>