force-app/main/default/objects/Deployment_Request__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <label>Started Date</label>
    <type>DateTime</type>
</CustomField>