force-app/main/default/objects/Deployment_Request__c/fields/Started_On__c.field-meta.xml
<CustomField>
    <fullName>Started_On__c</fullName>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>