force-app/main/default/objects/Deployment_Request__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Deployment_Request (Target Environment)</relationshipLabel>
    <relationshipName>Deployment_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>