force-app/main/default/objects/Deployment_Request__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Requests_Triggered</relationshipName>
    <type>Lookup</type>
</CustomField>